@@ -163,13 +163,6 @@ executed in.  It is passed the remaining argv array and the already parsed
 options. This is not called if an invalid subcommand is requested and there
 is no run block for the command.
 
-== +after_options+
-
-The +after_options+ method takes a block, and this block is executed
-directly after options parsing, in the same context that the +run+ block would be
-executed in.  It is passed the remaining argv array and the already parsed
-options.
-
 == +skip_option_parsing+
 
 The +skip_option_parsing+ method makes the command do no option parsing,
